html/assets/css/wiz.css
html {
  position: relative;
  min-height: 100%;
}

body {
	padding-top: 50px;
	margin-bottom: 60px;
}

.info-box {
  padding: 10px 15px;
  text-align: center;
}

h1 {
	color: #656565;
}

h2 {
	color: #2fb0b7;
}

.wiz-header img {
	padding-top: 3%;
	padding-bottom: 3%;
}

.wiz-header01 {
	background: url(../images/headerbg01.jpg);
	background-size: cover;
}

.wiz-header02 {
	background: url(../images/headerbg02.jpg);
	background-size: cover;
}

.wiz-header03 {
	background: url(../images/headerbg03.jpg);
	background-size: cover;
}

.wiz-header04 {
	background: url(../images/headerbg04.jpg);
	background-size: cover;
}

.wiz-header05 {
	background: url(../images/headerbg05.jpg);
	background-size: cover;
}






.jumbotron .ourteam h3 {
	color: #f9a541;
	text-align: center;
}

.jumbotron .ourteam h5 {
	text-align: center;
}



.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
background: rgba(179,179,179,1);
background: -moz-linear-gradient(top, rgba(179,179,179,1) 0%, rgba(196,196,196,1) 100%);
background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(179,179,179,1)), color-stop(100%, rgba(196,196,196,1)));
background: -webkit-linear-gradient(top, rgba(179,179,179,1) 0%, rgba(196,196,196,1) 100%);
background: -o-linear-gradient(top, rgba(179,179,179,1) 0%, rgba(196,196,196,1) 100%);
background: -ms-linear-gradient(top, rgba(179,179,179,1) 0%, rgba(196,196,196,1) 100%);
background: linear-gradient(to bottom, rgba(179,179,179,1) 0%, rgba(196,196,196,1) 100%);
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3b3b3', endColorstr='#c4c4c4', GradientType=0 );}

